# IEEE-ChatterBox

./: CMakeLists.txt  README.md
festival-mesh-core/: CMakeLists.txt
festival-mesh-core/include/: MeshEngine.h  SecurityManager.h  mesh_c_api.h
festival-mesh-core/src/: MeshEngine.cpp  mesh_c_api.cpp
festival-mesh-core/tests/: mesh_test.cpp
festival_mesh_app/: README.md  pubspec.yaml
festival_mesh_app/android/app/: build.gradle.kts
festival_mesh_app/android/app/src/main/: AndroidManifest.xml
festival_mesh_app/android/app/src/main/cpp/: CMakeLists.txt
festival_mesh_app/android/app/src/main/cpp/include/: SecurityManager.h  mesh_c_api.h
festival_mesh_app/android/app/src/main/cpp/src/: MeshEngine.cpp  SecurityManager.cpp  mesh_c_api.cpp
festival_mesh_app/android/app/src/main/kotlin/com/example/festival_mesh_app/: MainActivity.kt
festival_mesh_app/ios/: Podfile
festival_mesh_app/ios/Runner/: Info.plist
festival_mesh_app/ios/Runner.xcodeproj/: project.pbxproj
festival_mesh_app/lib/: injection_container.dart  main.dart
festival_mesh_app/lib/core/error/: failures.dart
festival_mesh_app/lib/core/ffi/: mesh_ffi.dart
festival_mesh_app/lib/core/router/: app_router.dart  app_router.gr.dart
festival_mesh_app/lib/core/utils/: mesh_logger.dart
festival_mesh_app/lib/features/chat/data/datasources/: ble_transport.dart  chat_local_data_source.dart  chat_remote_data_source.dart
festival_mesh_app/lib/features/chat/data/models/: chat_models.dart  chat_models.freezed.dart  chat_models.g.dart
festival_mesh_app/lib/features/chat/data/repositories/: chat_repository_impl.dart
festival_mesh_app/lib/features/chat/domain/entities/: chat_entities.dart  chat_entities.freezed.dart
festival_mesh_app/lib/features/chat/domain/repositories/: chat_repository.dart
festival_mesh_app/lib/features/chat/domain/usecases/: get_chats.dart  get_identity.dart  get_messages.dart  send_handshake.dart  send_message.dart
festival_mesh_app/lib/features/chat/presentation/bloc/: chat_bloc.dart  chat_bloc.freezed.dart
festival_mesh_app/lib/features/chat/presentation/pages/: main_screen.dart  message_screen.dart  setting_screen.dart
festival_mesh_app/lib/features/chat/presentation/provider/: chat_provider.dart
festival_mesh_app/lib/features/chat/presentation/widgets/: chat_bubble.dart  chat_details.dart  messages.dart  new_message.dart
festival_mesh_app/linux/: CMakeLists.txt
festival_mesh_app/linux/runner/: my_application.cc
festival_mesh_app/macos/Flutter/: GeneratedPluginRegistrant.swift
festival_mesh_app/macos/Runner.xcodeproj/: project.pbxproj
festival_mesh_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
festival_mesh_app/macos/Runner/Configs/: AppInfo.xcconfig
festival_mesh_app/test/: mesh_integration_test.dart
festival_mesh_app/test/features/chat/data/models/: chat_models_test.dart
festival_mesh_app/test/features/chat/data/repositories/: chat_repository_impl_test.dart
festival_mesh_app/test/features/chat/domain/usecases/: get_chats_test.dart  get_identity_test.dart  send_message_test.dart
festival_mesh_app/test/features/chat/presentation/bloc/: chat_bloc_test.dart
festival_mesh_app/web/: index.html  manifest.json
festival_mesh_app/windows/: CMakeLists.txt
festival_mesh_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
festival_mesh_app/windows/runner/: Runner.rc  main.cpp
festival_mesh_core/: CMakeLists.txt  festival_mesh_core.podspec
festival_mesh_core/example/: mesh_chat.cpp
festival_mesh_core/include/: SecurityManager.h
festival_mesh_core/src/: MeshEngine.cpp  SecurityManager.cpp  mesh_c_api.cpp
festival_mesh_core/tests/: mesh_test.cpp
